# spotter

./: .gitignore  LICENSE  README.md  flake.nix  go.mod  go.work  go.work.sum
.github/workflows/: pull-request.yaml
apps/kuberay-manager/: Dockerfile
apps/spotter/: Dockerfile  pyproject.toml
apps/spotter-manager/: .dockerignore  Dockerfile  go.mod  go.sum
apps/spotter-manager/cmd/spotter-manager/: handlers.go  main.go
apps/spotter-manager/internal/handlers/: handlers.go  handlers_test.go
apps/spotter-manager/web/: index.html
apps/spotter/src/spotter/: __init__.py  download.py  schemas.py  serve.py
apps/spotter/tests/spotter/: test_serve.py
configs/: rayservice-template.yaml  spotter-manager-deployment.yaml
go/cmd/spotter/: handlers.go  main.go
kuberay-manager/configs/: rayservice-template.yaml
python/: pyproject.toml
python/src/spotter/: serve.py
scripts/: 1_microk8s_setup.sh  2_build_and_push_spotter_manager.sh  3_deploy_spotter_manager.sh  4_build_and_push_spotter_app.sh  build_and_push_spotter_manager.sh  deploy_spotter_manager.sh  microk8s_setup.sh
spotter/src/spotter/: schemas.py
